--- a/style.css
+++ b/style.css
@@ -1,37 +1,80 @@
 *{
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:"Roboto",sans-serif;
+    color:rgb(0, 192, 192)
 }
 body{
-    margin: 0;
-}
-body h1{
+    background-color: #001636;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    padding-bottom: 25px;
 }
 .contenedor{
+    max-width: 80%;
+    width: 800px;
+    max-height: 70%;
+    height: 1000px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+}
+.contenedor h1{
+    font-size: 30px;
+    font-weight: bold;
+}
+.contenedor-botones{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 50px;
+    gap:30px
 }
-.contenedor p{
+#contador{
+    font-size: 30px;
+    font-weight: bold;
+}
+.button-game{
+    font-weight: bold;
     font-size: 20px;
+    border-radius: 5px;
+    color:black;
+    background-color:rgb(0, 192, 192) ;
+    border:1px solid rgb(0, 128, 128);
+    padding: 10px 30px;
+    /* box-shadow= desplazamiento en x, desplazamiento en y, desenfoque sombra,color*/
+    box-shadow: 0 5px 3px rgb(0, 128, 128);
+    cursor: pointer;
+    user-select: none;
 }
-.contenedorImagenes{
-    display: flex;
-    gap: 100px;
+.button-game:hover{
+    background-color: rgb(116, 167, 167);
 }
-.imagenes{
-    padding: 0px;
-    border: 0cap;
-    border-radius: 40%;
+.button-game:active{
+    background-color:gray;
 }
-.imagenes:hover{
-    background-color: rgb(139, 142, 146);
+#restart{
+    color:rgb(0, 192, 192);
+    background-color: #001636;
+    border: 3px solid rgb(0, 192, 192);
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 5px;
+    padding: 10px 30px;
+    box-shadow: 0 5px 3px rgb(0, 128, 128);
+    cursor: pointer;
+    user-select: none;
 }
-.imagenes:active{
-    background-color: black;   
+#restart:hover{
+    background-color: rgb(209, 204, 204);
+}
+#restart:active{
+    background-color:white ;
+}
+#foot{
+    color:rgb(0, 128, 128)
 }
 
